<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.boardhood.mobile"
    android:id="@+id/screen"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/footer_background"
    android:padding="0dp"
    android:stretchColumns="1">

    <TableRow>
      <com.boardhood.mobile.widget.ImageTextButton
        android:id="@+id/footerbar_feed"
        style="@style/FooterBarButton"
        android:text="@string/footerbar_feed"
        app:src="@drawable/footerbar_feed_icon" />
  
    <com.boardhood.mobile.widget.ImageTextButton
        android:id="@+id/footerbar_explore"
        style="@style/FooterBarButton"
        android:text="@string/footerbar_explore"
        app:src="@drawable/footerbar_explore_icon" />

    <ImageButton
        android:id="@+id/footerbar_new"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:scaleType="fitCenter"
        android:padding="8dp"
        android:background="@drawable/footerbar_button"
        android:src="@drawable/footerbar_new_icon" />
  
    <com.boardhood.mobile.widget.ImageTextButton
        android:id="@+id/footerbar_activity"
        style="@style/FooterBarButton"
        android:text="@string/footerbar_activity"
        app:src="@drawable/footerbar_activity_icon" />
  
    <com.boardhood.mobile.widget.ImageTextButton
        android:id="@+id/footerbar_profile"
        style="@style/FooterBarButton"
        android:text="@string/footerbar_profile"
        app:src="@drawable/footerbar_profile_icon" />
    </TableRow>
</TableLayout>