<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/conversation_form"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="5dp"
    android:background="@color/conversationlist_item_background">
    
    <LinearLayout
        android:id="@+id/conversation_form_top"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:weightSum="1.0" >
    
	 	<Button
	        android:id="@+id/conversation_interest"
	        android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/choose"
		    android:layout_weight=".20" />
	 	
        <ImageButton
            android:id="@+id/conversation_location"
            android:src="@drawable/location_disabled"
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content" 
            android:layout_weight=".80" />
	
 	</LinearLayout>
	<RelativeLayout
	    android:id="@+id/conversation_buttons"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true" >
	    
	   <Button 
           android:id="@+id/conversation_cancel"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/cancel"
           android:layout_alignParentLeft="true" />
	   
	   <ProgressBar 
	       android:id="@+id/loading_bar"
	       style="@android:style/Widget.ProgressBar.Small.Inverse"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_centerHorizontal="true"
	       android:layout_centerVertical="true"
	       android:visibility="gone" />
	   
	   <Button 
           android:id="@+id/conversation_send"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/send"
           android:layout_alignParentRight="true" />
	   
	</RelativeLayout>
	 
	<EditText
	    android:id="@+id/conversation_message"
	    android:layout_margin="2dp"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:gravity="top"
	    android:singleLine="false"
	    android:inputType="textMultiLine"
	    android:layout_below="@id/conversation_form_top"
	    android:layout_above="@id/conversation_buttons" />
 
</RelativeLayout>