<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/screen"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:gravity="left|top"
    android:background="@drawable/header_background"
    android:padding="0dp">
		
	<LinearLayout
	    android:id="@+id/actionbar_logo_wrapper"
	    android:orientation="horizontal"
	    android:layout_height="fill_parent"
	    android:layout_marginLeft="10dp"
	    android:gravity="left|center_vertical"
	    android:layout_gravity="left"
	    android:layout_width="wrap_content">
           
           <ImageView
               android:id="@+id/actionbar_logo"
               android:layout_width="wrap_content"
               android:layout_height="25dp"
               android:src="@drawable/actionbar_logo"
               android:scaleType="fitCenter"
               android:adjustViewBounds="true"
               android:clickable="true"
               android:contentDescription="@string/actionbar_logo" />

	</LinearLayout>
    
    <LinearLayout
	    android:id="@+id/actionbar_button_wrapper"
	    android:orientation="horizontal"
	    android:layout_height="wrap_content"
	    android:gravity="right"
	    android:layout_gravity="right"
	    android:layout_width="fill_parent">
           
	    
	    <LinearLayout 
	        android:id="@+id/actionbar_filter"
	        android:layout_width="45dp"
	        android:layout_height="45dp"
	        android:background="@drawable/header_button_background"
       		android:padding="0dp"
       		android:gravity="center"
       		android:clickable="true"
       		android:visibility="gone">
	        
	        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:src="@drawable/filter_icon"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:contentDescription="@string/actionbar_filter" />
	        
	    </LinearLayout>
	    
	    <LinearLayout
	        android:id="@+id/actionbar_refresh"
	        android:layout_width="45dp"
	        android:layout_height="45dp"
	        android:background="@drawable/header_button_background"
       		android:padding="0dp"
       		android:gravity="center"
       		android:clickable="true"
       		android:visibility="gone">
	        
	        <ProgressBar 
	       		android:id="@+id/actionbar_refresh_pb"
	       		android:indeterminateDrawable="@drawable/progress_refresh_indeterminate"
	       		android:indeterminateDuration="1500"
	       		android:minWidth="25dp"
	       		android:maxWidth="25dp"
	       		android:minHeight="25dp"
	       		android:maxHeight="25dp"
	       		android:layout_width="wrap_content"
	       		android:layout_height="wrap_content"
	       		android:visibility="gone" />
	        
	        <ImageView
	            android:id="@+id/actionbar_refresh_icon"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:src="@drawable/refresh"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:contentDescription="@string/actionbar_refresh" />
	        
	    </LinearLayout>
	    
	    <LinearLayout 
            android:id="@+id/actionbar_logout"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:background="@drawable/header_button_background"
            android:padding="0dp"
            android:gravity="center"
            android:clickable="true"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="10dp"
                android:textStyle="bold"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:text="@string/label_logout" />
            
        </LinearLayout>
	    
    </LinearLayout>
</LinearLayout>